feat: 🎸 added multi-platform notification services support
✅ Closes: #5

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,11 @@ services:
     container_name: dns-monitor
     environment:
       - DOMAIN=${DOMAIN}
-      - PUSHOVER_TOKEN=${PUSHOVER_TOKEN}
-      - PUSHOVER_USER=${PUSHOVER_USER}
+      - NOTIFIER_TYPE=${NOTIFIER_TYPE}
+      - PUSHOVER_APP_TOKEN=${PUSHOVER_APP_TOKEN}
+      - PUSHOVER_USER_KEY=${PUSHOVER_USER_KEY}
+      - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
+      - TELEGRAM_CHAT_IDS=${TELEGRAM_CHAT_IDS}
       - DNS_SERVER=${DNS_SERVER}
       - CHECK_INTERVAL=${CHECK_INTERVAL}
       - NOTIFY_ON_ERRORS=${NOTIFY_ON_ERRORS}
