fix: 🐛 updated the docker image with the remote one
✅ Closes: #11

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   dns-monitor:
-    image: dns-monitor:latest
+    image: 1gabriel/dns-monitor:latest
     build:
       context: .
     container_name: dns-monitor
